# pythonProject13.14

./: main.py  pyproject.toml
scr/: custom_queue.py  datastr.py  linked_list.py
tests/: test.py  testLinkedlist.py
